update tox.ini file

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,6 @@ deps =
 commands =
     django22: pip install 'Django>=2.2,<2.3'
     django30: pip install 'Django>=3.0,<3.1'
-    pytest --cov-report=html --cov-report term-missing --cov-branch --cov-fail-under=95 --cov=edx_analytics_transformers
+    python -m pytest --cov-report=html --cov-report term-missing --cov-branch --cov-fail-under=95 --cov=edx_analytics_transformers
     pycodestyle --config=setup.cfg edx_analytics_transformers setup.py
     pylint --rcfile=pylintrc edx_analytics_transformers setup.py
