Add django-fernet-fields and event-tracking in requirements

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -8,7 +8,8 @@ pytz
 python-dateutil
 isodate
 django-model-utils
-edx-django-utils
 jsonfield2
+django-fernet-fields
 
-# TODO: Add eventtracking here
+edx-django-utils
+event-tracking
